[flake8]
max-line-length = 120

[aliases]
test=pytest

[test]
addopts = tests

[mypy]
python_version = 3.6
ignore_missing_imports = true

[tool:pytest]
addopts = --cov app --doctest-modules --ignore build --verbose

[metadata]
name =
author =
author-email =
summary =
description-file = README.md
home-page =
requires-python = >= 3.6

[files]
packages =
    app
